# state-machine

./: .clang-format  .clangd  .gitignore  Doxyfile  README.md  a.out  main.cc  meson.build  out1
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: annotated.html  builder_8h_source.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fb0960ec231180e53faec7daf762325a.html  files.html  functions.html  functions_func.html  hierarchy.html  namespacemembers.html  namespacemembers_vars.html  namespaceregex__backend.html  namespaceregex__backend_1_1presets.html  namespaces.html  node_8h_source.html  presets_8h_source.html  structregex__backend_1_1MutableStateMachine-members.html  structregex__backend_1_1MutableStateMachine.html  structregex__backend_1_1StateMachineNode-members.html  structregex__backend_1_1StateMachineNode.html  structregex__backend_1_1StateMachineNodeBase-members.html  structregex__backend_1_1StateMachineNodeBase.html  structregex__backend_1_1StateMachineNode_3_01void_01_4-members.html  structregex__backend_1_1StateMachineNode_3_01void_01_4.html  structregex__table_1_1MutableStateMachine-members.html  structregex__table_1_1MutableStateMachine.html  structregex__table_1_1StateMachineNode-members.html  structregex__table_1_1StateMachineNodeBase.html
docs/html/: annotated.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  machine_8h_source.html  namespaceregex__table.html  (+7 more)
examples/: lexer.cc  numbers.cc
include/: builder.h
subprojects/: mutils.wrap
tests/: features.cc  meson.build  presets.cc
(+422 files in other folders)
